css/main.css
/* ... */
body {
	font-family: Roboto;
    font-size: 16px;
    font-weight: 500;
	display: flex;
	flex-direction: column;
}

.content {
  flex: 1 0 auto;
}

.footer{
  flex-shrink: 0;
}

/* screen header - content - footer */

/* flex box code */

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

.start{
	justify-content: start;
	align-items: center;
	display: flex;
}

.end{
	justify-content: end;
	align-items: center;
	display: flex;
}

a:hover {
    text-decoration: underline;
}

/* end - flex box code */

/* flex footer */

footer {
	padding-top: 40px;
    background-color: #1A202C;
    color: white;
	padding-bottom: 60px;
}
footer a:hover{
	text-decoration: underline;
}

footer h1{
	padding-right: 150px;
}

.footer-section {
	max-width: 80%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 20px;
	width: 100%;
	display: flex;
	flex-direction: column;
}

.footer-section p{
	padding-top: 40px;
    color: #EBF4FF !important;
	font-size: 16px;
}

.footer-menu{
	max-width: 25%;
	display: flex;
	flex-direction: column;
	margin-bottom: 20px;
	margin-right: 80px;
}

.footer-menu-title{
	font-family: Roboto;
	color: #5A67D8 !important;
	font-size: 24px;
	font-weight: bold;
	line-height: 28px;
	margin-bottom: 20px;
}

.footer-menu-item-header{
	font-family: Roboto;
	font-weight: bold;
	color: #EBF4FF !important;
	font-size: 16px;
	line-height: 140%;
	margin-bottom: 12px;
}

.footer-menu-item{
	font-family: Roboto;
	color: #EBF4FF !important;
	font-size: 16px;
	line-height: 140%;
	margin-bottom: 20px;
}

.footer-info-item{
	margin-top: 10px;
	color: #EBF4FF !important;
	font-size: 18px;
	margin-right: 40px;
}

.footer-info-item svg{
	color: #63B3ED;
	margin-right: 12px;
}

.footer-border{
	border-bottom: 1px solid  #4A5568;
	margin-bottom: 22px;
}

.footer-social-item{
	margin-right: 16px;
}

@media only screen and (max-width: 850px) {
	
  .footer-border{
    flex-direction: column !important;
  }
  
  .footer-menu{
	  max-width: 80% !important;
  }
  
  footer h1{
	  padding-right: 0px;
	  width: 100%;
  }
  
  .footer-info-item  {
    display: none;
  }
}

@media only screen and (max-width: 430px) {
	
	#footer-menu-row{
		flex-wrap: wrap !important;
	}
}

/*** main content pages section ***/

/* header menu */

.navbar{
	padding-top: 10px;
	padding-bottom: 10px;
	min-height: 80px;
	background: #1A202C !important;
}

.navbar .spacer{
	width: 5%;
}

.logo{
	color: white;
	font-family: Roboto;
	font-weight: bold;
	font-size: 24px;
	line-height: 28px;
	padding-right: 45px;
}

.nav-link{
	font-family: Roboto;
	font-size: 16px;
	color: #FFFFFF;
	line-height: 19px;
	cursor: pointer;
}

.nav-link:hover{
	color: #667EEA;
}

.nav-link i{
	margin-left: 5px;
}

.navbar .menu-main-link{
	padding-right: 24px;
}

.navbar .menu-second-level {
	overflow: auto;
	max-height: 0px;
	opacity: 0;
	transition: max-height 0.5s ease-in-out, opacity 1s ease-in-out;
	-webkit-transition: max-height 0.5s ease-in-out, opacity 1s ease-in-out;
	-moz-transition: max-height 0.5s ease-in-out, opacity 1s ease-in-out;
	-o-transition: max-height 0.5s ease-in-out, opacity 1s ease-in-out;
}

.navbar .menu-second-level-list {
	background-color: #1A202C;
	position: absolute;
	top: 55px;
	z-index: 1;
}

.navbar .menu-second-level-list-item {
	list-style: none;
	padding: 1rem;
}

.navbar .menu-second-level-list-item a {
	color: white;
	text-decoration: none;
}

.navbar .menu-second-level-list-item a:hover {
	color: #667EEA;
}

.navbar .flex-1 {
    flex: 1;
    flex-basis: 100%;
}

.search-menu-btn{
	background: white;
}

#header-search-btn:hover{
	background: white;
	color: #6c757d;
}

.mobile-menu{
	overflow: auto;
	position: fixed;
	height: 100%;
	margin-left: -320px;
	transition: margin-left 0.4s ease-out;
	background: white;
	width: 300px;
	z-index: 99999;
	padding: 40px 22px;
	box-shadow: 8px 0px 15px rgba(45, 55, 72, 0.15), 2px 0px 6px rgba(127, 156, 245, 0.35);
}

.mobile-menu-bg{
	position: fixed;
	height: 100%;
	margin-left: 100%;
	background: white;
	width: 100%;
	z-index: 99990;
	opacity: 0.35;
}

.input-group-mobile{
	margin-bottom: 20px;
}

.mobile-menu h2{
	font-size: 16px;
	font-family: Roboto;
	font-style: normal;
	font-weight: bold;
	line-height: 150%;
	color: #1A202C;
	margin-bottom: 40px;
}

.mobile-menu input{
	border: 0px !important;
	border-bottom: 1px solid #A0AEC0 !important;
}

.mobile-menu button{
	border: 0px !important;
	border-bottom: 1px solid #A0AEC0 !important;
}

.mobile-menu-link{
	font-family: Roboto;
	font-style: normal;
	font-weight: normal;
	font-size: 16px;
	line-height: 150%;
	width: 100%;
	margin-bottom: 30px;
	cursor: pointer;
}

.mobile-menu-link i{
	float: right;
}

.mobile-menu-second-level{
	overflow: hidden;
	display: block;
	padding-top: 4px;
	max-height: 0px;
	opacity: 0;
	transition: max-height 0.5s ease-in-out, opacity 1s ease-in-out;
	-webkit-transition: max-height 0.5s ease-in-out, opacity 1s ease-in-out;
	-moz-transition: max-height 0.5s ease-in-out, opacity 1s ease-in-out;
	-o-transition: max-height 0.5s ease-in-out, opacity 1s ease-in-out;
}

.collapsible {
	
}

.active > i {
	transform: rotate(180deg);
}

.mobile-menu-list-item {
	padding-top: 10px;
	padding-bottom: 10px;
}

@media only screen and (max-width: 850px) {
	.navbar-collapse{
		visibility: hidden;
	}
	
	.hamburger{
		display: inline-block !important;
	}

	.mobile-menu-link{
		color: #1A202C;
	}
}

/*** elements ***/

.example-search-input{
	min-width: 320px !important;
}

.download-btn{
	font-family: Roboto;
	background: #5A67D8;
	border-radius: 8px;
	color: white !important;
	font-size: 16px;
	line-height: 150%;
	padding: 12px 20px;
    text-decoration: none !important;
}

.download-btn svg{
	margin-left: 10px;
}

.download-btn:hover{
	background: #667EEA;
}

.download-btn:active{
	background: #5A67D8;
	color: #434190 !important;
}
/* ... */

